force-app/main/default/objects/DHS_Daily_Production_Summary__c/DHS_Daily_Production_Summary__c.object-meta.xml
<CustomObject>
    <label>Daily Production Summary</label>
    <nameField>
        <displayFormat>DPS-{000000}</displayFormat>
        <label>Daily Production Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Production Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>