force-app/main/default/objects/DHS_Daily_Production_Summary__c/fields/DHS_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>DHS_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_Daily_Production_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>