force-app/main/default/objects/DHS_Daily_Production_Summary__c/fields/Staging_Loan_Claims_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Staging_Loan_Claims_Reviewed__c</fullName>
    <label>Staging Loan Claims Reviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>