force-app/main/default/objects/DHS_Daily_Production_Summary__c/fields/Summary_Date__c.field-meta.xml
<CustomField>
    <fullName>Summary_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary Date</label>
    <type>Date</type>
</CustomField>